--- a/poc.yaml
+++ b/poc.yaml
@@ -5,7 +5,7 @@ info:
   title: Affirm AppSec Was Here
   version: '1.0'
 paths:
-  "/Appsec/../../":
+  "/Appsec/test":
     post:
       tags:
       - Test
